--- a/portfolio.html
+++ b/portfolio.html
@@ -139,7 +139,7 @@
                     <picture>
                       <source
                         srcset="
-                          ../images/project-image.webp    370w,
+                          ./images/project-image.webp     370w,
                           ../images/project-image@2x.webp 740w
                         "
                         type="image/webp"
