--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                   />
                   <img
                     srcset="../images/activity-image.jpg 370w, ../images/activity-image@2x.jpg 740w"
-                    src="./images/activity-image.jpg"
+                    src="../images/activity-image.jpg"
                     width="370"
                     alt="Набор кода по алгоритму"
                     sizes="33vw"
