--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                       ../images/activity-image-2.jpg    370w,
                       ../images/activity-image-2@2x.jpg 740w
                     "
-                    src="./images/activity-image-2.jpg"
+                    src="../images/activity-image-2.jpg"
                     width="370"
                     alt="Подбор дизайна"
                     sizes="33vw"
@@ -236,7 +236,7 @@
                       ../images/activity-image-3.jpg    370w,
                       ../images/activity-image-3@2x.jpg 740w
                     "
-                    src="./images/activity-image-3.jpg"
+                    src="../images/activity-image-3.jpg"
                     width="370"
                     alt="Выбор цвета из палитры"
                     sizes="33vw"
@@ -262,7 +262,7 @@
                 <img
                   srcset="../images/teammate.jpg 270w, ../images/teammate@2x.jpg 540w"
                   class="teammate__photo"
-                  src="./images/teammate.jpg"
+                  src="../images/teammate.jpg"
                   width="270"
                   alt="Фото Игоря Демьяненко"
                   sizes="(min-width: 1200px) 25vw,
@@ -315,7 +315,7 @@
                 <img
                   srcset="../images/teammate-2.jpg 270w, ../images/teammate-2@2x.jpg 540w"
                   class="teammate__photo"
-                  src="./images/teammate-2.jpg"
+                  src="../images/teammate-2.jpg"
                   width="270"
                   alt="Фото Ольги Репиной"
                   sizes="(min-width: 1200px) 25vw,
@@ -367,7 +367,7 @@
                 <img
                   srcset="../images/teammate-3.jpg 270w, ../images/teammate-3@2x.jpg 540w"
                   class="teammate__photo"
-                  src="./images/teammate-3.jpg"
+                  src="../images/teammate-3.jpg"
                   width="270"
                   alt="Фото Николая Тарасова"
                   sizes="(min-width: 1200px) 25vw,
@@ -419,7 +419,7 @@
                 <img
                   srcset="../images/teammate-4.jpg 270w, ../images/teammate-4@2x.jpg 540w"
                   class="teammate__photo"
-                  src="./images/teammate-4.jpg"
+                  src="../images/teammate-4.jpg"
                   width="270"
                   alt="Фото Михаила Ермакова"
                   sizes="(min-width: 1200px) 25vw,
