--- a/portfolio.html
+++ b/portfolio.html
@@ -139,7 +139,7 @@
                     <picture>
                       <source
                         srcset="
-                          ./images/project-image.webp     370w,
+                          ../images/project-image.webp     370w,
                           ../images/project-image@2x.webp 740w
                         "
                         type="image/webp"
@@ -150,7 +150,7 @@
                           ../images/project-image@2x.jpg 740w
                         "
                         class="product__image"
-                        src="./images/project-image.jpg"
+                        src="../images/project-image.jpg"
                         width="370"
                         alt="Ноутбук с открытым сайтом"
                         sizes="(min-width: 1200px) 33vw,
@@ -191,7 +191,7 @@
                           ../images/project-image-2@2x.jpg 740w
                         "
                         class="product__image"
-                        src="./images/project-image-2.jpg"
+                        src="../images/project-image-2.jpg"
                         width="370"
                         alt="Ноутбук с открытым сайтом"
                         sizes="(min-width: 1200px) 33vw,
@@ -232,7 +232,7 @@
                           ../images/project-image-3@2x.jpg 740w
                         "
                         class="product__image"
-                        src="./images/project-image-3.jpg"
+                        src="../images/project-image-3.jpg"
                         width="370"
                         alt="Два боскетболиста борятся за мяч"
                         sizes="(min-width: 1200px) 33vw,
@@ -273,7 +273,7 @@
                           ../images/project-image-4@2x.jpg 740w
                         "
                         class="product__image"
-                        src="./images/project-image-4.jpg"
+                        src="../images/project-image-4.jpg"
                         width="370"
                         alt="Ресторан Seafood"
                         sizes="(min-width: 1200px) 33vw,
@@ -315,7 +315,7 @@
                           ../images/project-image-5@2x.jpg 740w
                         "
                         class="product__image"
-                        src="./images/project-image-5.jpg"
+                        src="../images/project-image-5.jpg"
                         width="370"
                         alt="Наушники"
                         sizes="(min-width: 1200px) 33vw,
@@ -357,7 +357,7 @@
                           ../images/project-image-6@2x.jpg 740w
                         "
                         class="product__image"
-                        src="./images/project-image-6.jpg"
+                        src="../images/project-image-6.jpg"
                         width="370"
                         alt="Две коробки"
                         sizes="(min-width: 1200px) 33vw,
@@ -399,7 +399,7 @@
                           ../images/project-image-7@2x.jpg 740w
                         "
                         class="product__image"
-                        src="./images/project-image-7.jpg"
+                        src="../images/project-image-7.jpg"
                         width="370"
                         alt="Монитор с открытым сайтом"
                         sizes="(min-width: 1200px) 33vw,
@@ -441,7 +441,7 @@
                           ../images/project-image-8@2x.jpg 740w
                         "
                         class="product__image"
-                        src="./images/project-image-8.jpg"
+                        src="../images/project-image-8.jpg"
                         width="370"
                         alt="Открытая книга"
                         sizes="(min-width: 1200px) 33vw,
@@ -483,7 +483,7 @@
                           ../images/project-image-9@2x.jpg 740w
                         "
                         class="product__image"
-                        src="./images/project-image-9.jpg"
+                        src="../images/project-image-9.jpg"
                         width="370"
                         alt="Бирка с надписью Label tag"
                         sizes="(min-width: 1200px) 33vw,
