--- a/index.html
+++ b/index.html
@@ -202,17 +202,17 @@
                 <picture>
                   <source
                     srcset="
-                      ../images/activity-image-2.webp    370w,
-                      ../images/activity-image-2@2x.webp 740w
+                      ./images/activity-image-2.webp    370w,
+                      ./images/activity-image-2@2x.webp 740w
                     "
                     type="image/webp"
                   />
                   <img
                     srcset="
-                      ../images/activity-image-2.jpg    370w,
-                      ../images/activity-image-2@2x.jpg 740w
+                      ./images/activity-image-2.jpg    370w,
+                      ./images/activity-image-2@2x.jpg 740w
                     "
-                    src="../images/activity-image-2.jpg"
+                    src="./images/activity-image-2.jpg"
                     width="370"
                     alt="Подбор дизайна"
                     sizes="33vw"
@@ -226,17 +226,17 @@
                 <picture>
                   <source
                     srcset="
-                      ../images/activity-image-3.webp    370w,
-                      ../images/activity-image-3@2x.webp 740w
+                      images/activity-image-3.webp    370w,
+                      images/activity-image-3@2x.webp 740w
                     "
                     type="image/webp"
                   />
                   <img
                     srcset="
-                      ../images/activity-image-3.jpg    370w,
-                      ../images/activity-image-3@2x.jpg 740w
+                      images/activity-image-3.jpg    370w,
+                      images/activity-image-3@2x.jpg 740w
                     "
-                    src="../images/activity-image-3.jpg"
+                    src="images/activity-image-3.jpg"
                     width="370"
                     alt="Выбор цвета из палитры"
                     sizes="33vw"
