--- a/index.html
+++ b/index.html
@@ -181,14 +181,14 @@
                 <picture>
                   <source
                     srcset="
-                      ../images/activity-image.webp    370w,
-                      ../images/activity-image@2x.webp 740w
+                      ./images/activity-image.webp    370w,
+                      ./images/activity-image@2x.webp 740w
                     "
                     type="image/webp"
                   />
                   <img
-                    srcset="../images/activity-image.jpg 370w, ../images/activity-image@2x.jpg 740w"
-                    src="../images/activity-image.jpg"
+                    srcset="./images/activity-image.jpg 370w, ./images/activity-image@2x.jpg 740w"
+                    src="./images/activity-image.jpg"
                     width="370"
                     alt="Набор кода по алгоритму"
                     sizes="33vw"
@@ -256,13 +256,13 @@
             <li class="teammate">
               <picture>
                 <source
-                  srcset="../images/teammate.webp 270w, ../images/teammate@2x.webp 540w"
+                  srcset="./images/teammate.webp 270w, ./images/teammate@2x.webp 540w"
                   type="image/webp"
                 />
                 <img
-                  srcset="../images/teammate.jpg 270w, ../images/teammate@2x.jpg 540w"
+                  srcset="./images/teammate.jpg 270w, ./images/teammate@2x.jpg 540w"
                   class="teammate__photo"
-                  src="../images/teammate.jpg"
+                  src="./images/teammate.jpg"
                   width="270"
                   alt="Фото Игоря Демьяненко"
                   sizes="(min-width: 1200px) 25vw,
@@ -309,13 +309,13 @@
             <li class="teammate">
               <picture>
                 <source
-                  srcset="../images/teammate-2.webp 270w, ../images/teammate-2@2x.webp 540w"
+                  srcset="./images/teammate-2.webp 270w, ./images/teammate-2@2x.webp 540w"
                   type="image/webp"
                 />
                 <img
-                  srcset="../images/teammate-2.jpg 270w, ../images/teammate-2@2x.jpg 540w"
+                  srcset="./images/teammate-2.jpg 270w, ./images/teammate-2@2x.jpg 540w"
                   class="teammate__photo"
-                  src="../images/teammate-2.jpg"
+                  src="./images/teammate-2.jpg"
                   width="270"
                   alt="Фото Ольги Репиной"
                   sizes="(min-width: 1200px) 25vw,
@@ -361,13 +361,13 @@
             <li class="teammate">
               <picture>
                 <source
-                  srcset="../images/teammate-3.webp 270w, ../images/teammate-3@2x.webp 540w"
+                  srcset="./images/teammate-3.webp 270w, ./images/teammate-3@2x.webp 540w"
                   type="image/webp"
                 />
                 <img
-                  srcset="../images/teammate-3.jpg 270w, ../images/teammate-3@2x.jpg 540w"
+                  srcset="./images/teammate-3.jpg 270w, ./images/teammate-3@2x.jpg 540w"
                   class="teammate__photo"
-                  src="../images/teammate-3.jpg"
+                  src="./images/teammate-3.jpg"
                   width="270"
                   alt="Фото Николая Тарасова"
                   sizes="(min-width: 1200px) 25vw,
@@ -413,13 +413,13 @@
             <li class="teammate">
               <picture>
                 <source
-                  srcset="../images/teammate-4.webp 270w, ../images/teammate-4@2x.webp 540w"
+                  srcset="./images/teammate-4.webp 270w, ./images/teammate-4@2x.webp 540w"
                   type="image/webp"
                 />
                 <img
-                  srcset="../images/teammate-4.jpg 270w, ../images/teammate-4@2x.jpg 540w"
+                  srcset="./images/teammate-4.jpg 270w, ./images/teammate-4@2x.jpg 540w"
                   class="teammate__photo"
-                  src="../images/teammate-4.jpg"
+                  src="./images/teammate-4.jpg"
                   width="270"
                   alt="Фото Михаила Ермакова"
                   sizes="(min-width: 1200px) 25vw,
