--- a/portfolio.html
+++ b/portfolio.html
@@ -139,18 +139,18 @@
                     <picture>
                       <source
                         srcset="
-                          ../images/project-image.webp     370w,
-                          ../images/project-image@2x.webp 740w
+                          ./images/project-image.webp     370w,
+                          ./images/project-image@2x.webp 740w
                         "
                         type="image/webp"
                       />
                       <img
                         srcset="
-                          ../images/project-image.jpg    370w,
-                          ../images/project-image@2x.jpg 740w
+                          ./images/project-image.jpg    370w,
+                          ./images/project-image@2x.jpg 740w
                         "
                         class="product__image"
-                        src="../images/project-image.jpg"
+                        src="./images/project-image.jpg"
                         width="370"
                         alt="Ноутбук с открытым сайтом"
                         sizes="(min-width: 1200px) 33vw,
@@ -180,18 +180,18 @@
                     <picture>
                       <source
                         srcset="
-                          ../images/project-image-2.webp    370w,
-                          ../images/project-image-2@2x.webp 740w
+                          ./images/project-image-2.webp    370w,
+                          ./images/project-image-2@2x.webp 740w
                         "
                         type="image/webp"
                       />
                       <img
                         srcset="
-                          ../images/project-image-2.jpg    370w,
-                          ../images/project-image-2@2x.jpg 740w
+                          ./images/project-image-2.jpg    370w,
+                          ./images/project-image-2@2x.jpg 740w
                         "
                         class="product__image"
-                        src="../images/project-image-2.jpg"
+                        src="./images/project-image-2.jpg"
                         width="370"
                         alt="Ноутбук с открытым сайтом"
                         sizes="(min-width: 1200px) 33vw,
@@ -221,18 +221,18 @@
                     <picture>
                       <source
                         srcset="
-                          ../images/project-image-3.webp    370w,
-                          ../images/project-image-3@2x.webp 740w
+                          ./images/project-image-3.webp    370w,
+                          ./images/project-image-3@2x.webp 740w
                         "
                         type="image/webp"
                       />
                       <img
                         srcset="
-                          ../images/project-image-3.jpg    370w,
-                          ../images/project-image-3@2x.jpg 740w
+                          ./images/project-image-3.jpg    370w,
+                          ./images/project-image-3@2x.jpg 740w
                         "
                         class="product__image"
-                        src="../images/project-image-3.jpg"
+                        src="./images/project-image-3.jpg"
                         width="370"
                         alt="Два боскетболиста борятся за мяч"
                         sizes="(min-width: 1200px) 33vw,
@@ -262,18 +262,18 @@
                     <picture>
                       <source
                         srcset="
-                          ../images/project-image-4.webp    370w,
-                          ../images/project-image-4@2x.webp 740w
+                          ./images/project-image-4.webp    370w,
+                          ./images/project-image-4@2x.webp 740w
                         "
                         type="image/webp"
                       />
                       <img
                         srcset="
-                          ../images/project-image-4.jpg    370w,
-                          ../images/project-image-4@2x.jpg 740w
+                          ./images/project-image-4.jpg    370w,
+                          ./images/project-image-4@2x.jpg 740w
                         "
                         class="product__image"
-                        src="../images/project-image-4.jpg"
+                        src="./images/project-image-4.jpg"
                         width="370"
                         alt="Ресторан Seafood"
                         sizes="(min-width: 1200px) 33vw,
@@ -304,18 +304,18 @@
                     <picture>
                       <source
                         srcset="
-                          ../images/project-image-5.webp    370w,
-                          ../images/project-image-5@2x.webp 740w
+                          ./images/project-image-5.webp    370w,
+                          ./images/project-image-5@2x.webp 740w
                         "
                         type="image/webp"
                       />
                       <img
                         srcset="
-                          ../images/project-image-5.jpg    370w,
-                          ../images/project-image-5@2x.jpg 740w
+                          ./images/project-image-5.jpg    370w,
+                          ./images/project-image-5@2x.jpg 740w
                         "
                         class="product__image"
-                        src="../images/project-image-5.jpg"
+                        src="./images/project-image-5.jpg"
                         width="370"
                         alt="Наушники"
                         sizes="(min-width: 1200px) 33vw,
@@ -346,18 +346,18 @@
                     <picture>
                       <source
                         srcset="
-                          ../images/project-image-6.webp    370w,
-                          ../images/project-image-6@2x.webp 740w
+                          ./images/project-image-6.webp    370w,
+                          ./images/project-image-6@2x.webp 740w
                         "
                         type="image/webp"
                       />
                       <img
                         srcset="
-                          ../images/project-image-6.jpg    370w,
-                          ../images/project-image-6@2x.jpg 740w
+                          ./images/project-image-6.jpg    370w,
+                          ./images/project-image-6@2x.jpg 740w
                         "
                         class="product__image"
-                        src="../images/project-image-6.jpg"
+                        src="./images/project-image-6.jpg"
                         width="370"
                         alt="Две коробки"
                         sizes="(min-width: 1200px) 33vw,
@@ -388,18 +388,18 @@
                     <picture>
                       <source
                         srcset="
-                          ../images/project-image-7.webp    370w,
-                          ../images/project-image-7@2x.webp 740w
+                          ./images/project-image-7.webp    370w,
+                          ./images/project-image-7@2x.webp 740w
                         "
                         type="image/webp"
                       />
                       <img
                         srcset="
-                          ../images/project-image-7.jpg    370w,
-                          ../images/project-image-7@2x.jpg 740w
+                          ./images/project-image-7.jpg    370w,
+                          ./images/project-image-7@2x.jpg 740w
                         "
                         class="product__image"
-                        src="../images/project-image-7.jpg"
+                        src="./images/project-image-7.jpg"
                         width="370"
                         alt="Монитор с открытым сайтом"
                         sizes="(min-width: 1200px) 33vw,
@@ -430,18 +430,18 @@
                     <picture>
                       <source
                         srcset="
-                          ../images/project-image-8.webp    370w,
-                          ../images/project-image-8@2x.webp 740w
+                          ./images/project-image-8.webp    370w,
+                          ./images/project-image-8@2x.webp 740w
                         "
                         type="image/webp"
                       />
                       <img
                         srcset="
-                          ../images/project-image-8.jpg    370w,
-                          ../images/project-image-8@2x.jpg 740w
+                          ./images/project-image-8.jpg    370w,
+                          ./images/project-image-8@2x.jpg 740w
                         "
                         class="product__image"
-                        src="../images/project-image-8.jpg"
+                        src="./images/project-image-8.jpg"
                         width="370"
                         alt="Открытая книга"
                         sizes="(min-width: 1200px) 33vw,
@@ -472,18 +472,18 @@
                     <picture>
                       <source
                         srcset="
-                          ../images/project-image-9.webp    370w,
-                          ../images/project-image-9@2x.webp 740w
+                          ./images/project-image-9.webp    370w,
+                          ./images/project-image-9@2x.webp 740w
                         "
                         type="image/webp"
                       />
                       <img
                         srcset="
-                          ../images/project-image-9.jpg    370w,
-                          ../images/project-image-9@2x.jpg 740w
+                          ./images/project-image-9.jpg    370w,
+                          ./images/project-image-9@2x.jpg 740w
                         "
                         class="product__image"
-                        src="../images/project-image-9.jpg"
+                        src="./images/project-image-9.jpg"
                         width="370"
                         alt="Бирка с надписью Label tag"
                         sizes="(min-width: 1200px) 33vw,
